--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <i class="fas fa-envelope"></i>
                     <span>Email</span>
                 </a></li>
-                <li><a href="kimiya_mavaddat_resume.pdf" download>
+                <li><a href="kimiya_mavvadat_resume.pdf" download>
                     <i class="fas fa-download"></i>
                     <span>Resume</span>
                 </a></li>
@@ -51,23 +51,27 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-text">
-            <h1>Hi I'm Kimiya 🎀</h1>
+            <h1>Hi, I'm Kimiya 🎀</h1>
             <p>
-                I'm an enthusiastic computer science student with a deep passion for programming, storytelling, and building community—especially for Persian girls in STEM. As I develop my skills in Python and software engineering, I bring with me over five years of experience in digital marketing and content creation.
+                I'm an enthusiastic computer science student with a deep passion for programming, storytelling, and building community, especially for Persian girls in STEM. As I develop my skills in Python and software engineering, I bring with me over five years of experience in digital marketing and content creation.
             </p>
             <p>
-                Through social media, I've created spaces where young women—especially those from underrepresented backgrounds—can feel seen, supported, and inspired to explore tech. I believe technology isn't just about code; it's about the people it touches.
+                Through social media, I've created spaces where young women, especially those from underrepresented backgrounds, can feel seen, supported, and inspired to explore tech. I believe technology isn't just about code; it's about the people it touches.
             </p>
             <div class="hero-buttons">
                 <a href="#skills" class="btn">
                     <i class="fas fa-code"></i>
                     Skills
                 </a>
+                <a href="#projects" class="btn">
+                    <i class="fas fa-folder-open"></i>
+                    Projects
+                </a>
                 <a href="#contact" class="btn">
                     <i class="fas fa-envelope"></i>
                     Contact
                 </a>
-                <a href="kimiya_mavaddat_resume.pdf" download class="btn">
+                <a href="kimiya_mavvadat_resume.pdf" download class="btn">
                     <i class="fas fa-download"></i>
                     Resume
                 </a>
@@ -109,6 +113,59 @@
                 <div class="skill-item">
                     <i class="fas fa-bullhorn"></i>
                     Digital Marketing
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects" id="projects">
+        <div class="container">
+            <h2>My Projects</h2>
+            <p class="projects-description">
+                Here are some Python projects I've built while learning to code. Each project helped me practice different programming concepts and solve real-world problems.
+            </p>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-clock"></i>
+                    </div>
+                    <h3>Timezone Converter</h3>
+                    <p class="project-description">
+                        A Python script that converts time between different timezones around the world. Perfect for scheduling meetings with people in different countries or planning travel.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">DateTime</span>
+                        <span class="tech-tag">PyTZ</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="datetime.py" download class="project-btn">
+                            <i class="fas fa-download"></i>
+                            Download Code
+                        </a>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-chart-bar"></i>
+                    </div>
+                    <h3>Twitter Data Visualizer</h3>
+                    <p class="project-description">
+                        A data visualization tool that creates charts and graphs from Twitter-like data. Generates fake social media data and displays beautiful charts showing user engagement patterns.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Matplotlib</span>
+                        <span class="tech-tag">Data Analysis</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="twitter.py" download class="project-btn">
+                            <i class="fas fa-download"></i>
+                            Download Code
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
