--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <i class="fas fa-envelope"></i>
                     <span>Email</span>
                 </a></li>
-                <li><a href="kimiya_mavaddat_resume.pdf" download>
+                <li><a href="blob:https://github.com/c1d5c3b4-2ff1-42b5-895e-ae7a5dce4191" download>
                     <i class="fas fa-download"></i>
                     <span>Resume</span>
                 </a></li>
