--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <i class="fas fa-envelope"></i>
                     Contact
                 </a>
-                <a href="kimiya_mavaddat_resume.pdf" download class="btn">
+                <a href="blob:https://github.com/c1d5c3b4-2ff1-42b5-895e-ae7a5dce4191" download class="btn">
                     <i class="fas fa-download"></i>
                     Resume
                 </a>
